--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                     <div class="social__media">
                         <a class="social__media__item" href="https://www.linkedin.com/in/everton-lourenco-frontend/">LinkedIn</a>
                         <a class="social__media__item" href="https://github.com/everton-lourenco">Github</a>
+                        <a class="social__media__item" href="assets/img/curriculo_everton_oliveira_servicenow.docx" download="curriculo_everton_oliveira_servicenow.docx">Currículo</a>
                     </div>
                 </div>
                 <div class="foto">
