--- a/projetos.html
+++ b/projetos.html
@@ -51,6 +51,7 @@
           <div class="social__media">
             <a class="social__media__item" href="https://www.linkedin.com/in/everton-lourenco-frontend/">LinkedIn</a>
             <a class="social__media__item" href="https://github.com/everton-lourenco">Github</a>
+            <a class="social__media__item" href="assets/img/curriculo_everton_oliveira_servicenow.docx" download="curriculo_everton_oliveira_servicenow.docx">Currículo</a>
           </div>
         </div>
         <div class="foto">
@@ -62,7 +63,7 @@
       <div class="row justify-content-center">
         <a href="https://everton-lourenco.github.io/projeto__javascript/">
           <article class="card card__foto card__wrapper borda__cor card__largura p-0 m-4 col-12 col-md-4">
-            <img src="assets/img/foto_projeto_js.png" class="card-img-top card-posicao-imagem" alt="tigela com salada de abacate, vista superior">
+            <img src="assets/img/foto_projeto_js.png" class="card-img-top card-posicao-imagem" alt="foto do site do projeto carro">
         </a>
         <div class="card-body">
           <h3 class="card__titulo font-weight-bold">Projeto Customiza Carro</h3>
@@ -72,7 +73,7 @@
 
         <a href="https://everton-lourenco.github.io/projeto__fokus/">
           <article class="card card__foto card__wrapper borda__cor card__largura p-0 m-4 col-12 col-md-4">
-            <img src="assets/img/foto_projeto_fokus.png" class="card-img-top card-posicao-imagem" alt="tigela com salada de abacate, vista superior">
+            <img src="assets/img/foto_projeto_fokus.png" class="card-img-top card-posicao-imagem" alt="foto do site do projeto fokus">
         </a>
         <div class="card-body">
           <h3 class="card__titulo font-weight-bold">Projeto Fokus</h3>
@@ -82,7 +83,7 @@
 
         <a href="https://everton-lourenco.github.io/projeto__code__connect/">
           <article class="card card__foto card__wrapper borda__cor card__largura p-0 m-4 col-12 col-md-4">
-            <img src="assets/img/foto_projeto_code_connect.png" class="card-img-top card-posicao-imagem" alt="tigela com salada de abacate, vista superior">
+            <img src="assets/img/foto_projeto_code_connect.png" class="card-img-top card-posicao-imagem" alt="foto do site do projeto code connect">
         </a>
         <div class="card-body">
           <h3 class="card__titulo font-weight-bold">Projeto Code Connect</h3>
@@ -92,7 +93,7 @@
 
         <a href="https://everton-lourenco.github.io/projeto__lista__compras/">
           <article class="card card__foto card__wrapper borda__cor card__largura p-0 m-4 col-12 col-md-4">
-            <img src="assets/img/projeto_lista_compras.png" class="card-img-top card-posicao-imagem" alt="tigela com salada de abacate, vista superior">
+            <img src="assets/img/projeto_lista_compras.png" class="card-img-top card-posicao-imagem" alt="foto do site do projeto lista de compras">
         </a>
         <div class="card-body">
           <h3 class="card__titulo font-weight-bold">Projeto Lista Compras</h3>
